feat: add data to table

--- a/prayer-times-web/index.html
+++ b/prayer-times-web/index.html
@@ -3,6 +3,20 @@
 
 <body>
 
+    <table id="myTable" class="table table-borderless table-striped table-earning">
+        <thead>
+          <tr>
+            <th>Day</th>
+            <th>Fajir</th>
+            <th>Sunrise</th>
+            <th>Dhuhir</th>
+            <th>Asr</th>
+            <th>Maghrib</th>
+            <th>Isha</th>
+          </tr>
+        </thead>
+        <tbody id="testBody"></tbody>
+      </table>
     <script src="dataHandler.js"></script>
 
 </body>
