--- a/prayer-times-web/index.html
+++ b/prayer-times-web/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <link rel="stylesheet" href="table.css">
+</head>
+
 <body>
 
-    <table id="myTable" class="table table-borderless table-striped table-earning">
+    <table id="times">
         <thead>
-          <tr>
-            <th>Day</th>
-            <th>Fajir</th>
-            <th>Sunrise</th>
-            <th>Dhuhir</th>
-            <th>Asr</th>
-            <th>Maghrib</th>
-            <th>Isha</th>
-          </tr>
+            <tr>
+                <th>Day</th>
+                <th>Fajir</th>
+                <th>Sunrise</th>
+                <th>Dhuhir</th>
+                <th>Asr</th>
+                <th>Maghrib</th>
+                <th>Isha</th>
+            </tr>
         </thead>
-        <tbody id="testBody"></tbody>
-      </table>
+        <tbody id="timesBody"></tbody>
+    </table>
     <script src="dataHandler.js"></script>
 
 </body>
